<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_registeration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:fitsSystemWindows="true"
    android:background="@drawable/elsory_ui_background"
    tools:context="com.askerlap.emad.elsory.UI.Registeration">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:gravity="center">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:id="@+id/Reg_Editemail"
            android:layout_marginBottom="10dp"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_hint"
            android:textColorHint="@android:color/white"
            android:textColor="@android:color/white"
            android:layout_marginBottom="10dp"
            android:id="@+id/Reg_Editpassword"
            android:inputType="textPassword"/>

    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:text="@string/btn_register"
        android:textColor="@android:color/black"
        android:layout_marginTop="20dp"
        android:background="@android:color/white"
        android:layout_height="wrap_content" />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:layout_marginTop="5dp"/>
</LinearLayout>
    <ProgressBar
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:id="@+id/login_progressbar"
        android:visibility="gone"/>
</android.support.design.widget.CoordinatorLayout>
