<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:fitsSystemWindows="true"
    android:background="@drawable/elsory_ui_background"
    tools:context="com.askerlap.emad.elsory.UI.LoginActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:layout_height="match_parent">
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:textColorHint="#ffffff"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:layout_marginBottom="10dp"
            android:hint="@string/email_hint"
            android:id="@+id/Edit_email"
            />
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:textColorHint="#ffffff"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:layout_marginBottom="10dp"
            android:id="@+id/Edit_password"/>
    </android.support.design.widget.TextInputLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/login_buttonColor"
        android:text="@string/btn_login"
        android:layout_marginTop="20dp"
        android:id="@+id/btn_account_login"
        android:textColor="@android:color/black"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:textColor="@android:color/white"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:textSize="15dp"
        android:layout_marginTop="5dp"
        android:id="@+id/login_btn_signup"/>
</LinearLayout>
    <ProgressBar
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="30dp"
        android:id="@+id/login_progressbar"
        android:visibility="gone"/>
</android.support.design.widget.CoordinatorLayout>
